--- a/src/about.njk
+++ b/src/about.njk
@@ -30,7 +30,8 @@ layout: 'base.njk'
 		<ul class="list-disc list-outside space-y-2 pl-5 text-lg text-gray-800 dark:text-gray-200">
 			<li class="pl-2">Provide humane care for stray cats and dogs, ensuring a healthy environment.</li>
 			<li class="pl-2">Implement a Trap-Neuter-Return-Maintain (TNRM) program for population control.</li>
-			<li class="pl-2">Educate the community about the role of free roaming cats and dogs in the ecosystem.</li>
+			<li class="pl-2">Educate the community about the role of free roaming cats and dogs in the community.</li>
+			<li class="pl-2">Coordinate & working together with campus' professors and staffs in alignment with their respective duties.</li>
 		</ul>
   
         <p class="text-lg text-gray-800 dark:text-gray-200">
@@ -52,7 +53,8 @@ layout: 'base.njk'
 		<ul class="list-disc list-outside space-y-5 pl-5 text-lg text-gray-800 dark:text-gray-200 pb-6">
 			<li class="pl-2">Menyediakan perawatan dan lingkungan yang baik bagi kucing dan anjing jalanan;</li>
 			<li class="pl-2">Mengimplementasikan strategi kontrol populasi kucing jalanan dengan melakukan Trap-Neuter-Return-Maintain (TNRM);</li>
-			<li class="pl-2">Mengedukasi masyarakat kampus tentang kucing dan anjing jalanan.</li>
+			<li class="pl-2">Mengedukasi masyarakat kampus tentang kucing dan anjing jalanan;</li>
+			<li class="pl-2">Berkoordinasi & bekerjasama dengan para dosen, tendik dan K3L yang sesuai dengan pekerjaan masing-masing</li>
 		</ul>
 
 
