--- a/src/about.njk
+++ b/src/about.njk
@@ -54,10 +54,10 @@ layout: 'base.njk'
 			<li class="pl-2">Menyediakan perawatan dan lingkungan yang baik bagi kucing dan anjing jalanan;</li>
 			<li class="pl-2">Mengimplementasikan strategi kontrol populasi kucing jalanan dengan melakukan Trap-Neuter-Return-Maintain (TNRM);</li>
 			<li class="pl-2">Mengedukasi masyarakat kampus tentang kucing dan anjing jalanan;</li>
-			<li class="pl-2">Berkoordinasi & bekerjasama dengan para dosen, tendik dan K3L yang sesuai dengan pekerjaan masing-masing</li>
+			<li class="pl-2">Berkoordinasi & bekerjasama dengan para dosen, tendik dan K3L sesuai dengan pekerjaan masing-masing</li>
 		</ul>
 
-
+	<p class="text-lg text-gray-800 dark:text-gray-200">Communications P.I.C: Shafira <u><a href="https://line.me/ti/p/lqlHHk6wKJ"(LINE: Click here to add)</a></u></p>
   
         
       </div>
