--- a/src/about.njk
+++ b/src/about.njk
@@ -57,7 +57,7 @@ layout: 'base.njk'
 			<li class="pl-2">Berkoordinasi & bekerjasama dengan para dosen, tendik dan K3L sesuai dengan pekerjaan masing-masing</li>
 		</ul>
 
-	<p class="text-lg text-gray-800 dark:text-gray-200">Communications P.I.C: Shafira <u><a href="https://line.me/ti/p/lqlHHk6wKJ"(LINE: Click here to add)</a></u></p>
+	<p class="text-lg text-gray-800 dark:text-gray-200">Communications P.I.C: Shafira <u><a href="https://line.me/ti/p/lqlHHk6wKJ">(LINE: Click here to add)</a></u></p>
   
         
       </div>
